cmake_minimum_required(VERSION 3.13)

project(CudaStudy)

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/0.basic/0.matmul)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/0.basic/1.merge_sort)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/0.basic/2.linear_search)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/1.image/0.blur)
